improved G1 parser (gc-verbose + -XX:+PrintGCDetails)